--- a/tools/MiDaS_ONNX_Export.ipynb
+++ b/tools/MiDaS_ONNX_Export.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "history_visible": true,
-      "authorship_tag": "ABX9TyNmkFwzXwCZvPoGONER3n5b",
+      "authorship_tag": "ABX9TyOxLXCG1dGO4g0zcVY1KXoy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,7 +36,7 @@
       "outputs": [],
       "source": [
         "# @title Environment Setup\n",
-        "!git clone https://github.com/semjon00/MiDaS\n",
+        "!git clone https://github.com/isl-org/MiDaS/\n",
         "!git submodule add https://github.com/isl-org/Next-ViT midas/external/next_vit\n",
         "%cd MiDaS\n",
         "!pip install torch==1.13 torchvision==0.14.0\n",
@@ -218,31 +218,7 @@
         "    else:\n",
         "        net_w, net_h = 384, 384\n",
         "\n",
-        "    #resize_mode = \"minimal\"\n",
-        "    #normalization = NormalizeImage(mean=[0.5, 0.5, 0.5], std=[0.5, 0.5, 0.5])\n",
-        "\n",
-        "    #resize_image = Resize(\n",
-        "    #    net_w,\n",
-        "    #    net_h,\n",
-        "    #    resize_target=None,\n",
-        "    #    keep_aspect_ratio=False,\n",
-        "    #    ensure_multiple_of=32,\n",
-        "    #    resize_method=\"upper_bound\",\n",
-        "    #    image_interpolation_method=cv2.INTER_CUBIC,\n",
-        "    #)\n",
-        "\n",
-        "    #transform = Compose(\n",
-        "    #    [\n",
-        "    #        resize_image,\n",
-        "    #        normalization,\n",
-        "    #        PrepareForNet()\n",
-        "    #    ]\n",
-        "    #)\n",
         "    model.eval()\n",
-        "\n",
-        "    #img = utils.read_image(\"input/dog.jpg\")\n",
-        "    #img_input = transform({\"image\": img})[\"image\"]\n",
-        "    #shaped = img_input.reshape(1, 3, net_h, net_w)\n",
         "    torch.onnx.export(model, torch.rand(1, 3, net_h, net_w, dtype=torch.float), onnxFile, export_params=True)\n",
         "\n",
         "    # free memory\n",
@@ -250,49 +226,10 @@
         "    gc.collect()\n"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "gCp7VHWwAcHp",
-        "outputId": "22029bd8-f306-4863-a414-4848a476c643"
+        "id": "gCp7VHWwAcHp"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "ONNX model for midas_v21_small_256 already exists. Skipping...\n",
-            "ONNX model for midas_v21_384 already exists. Skipping...\n",
-            "ONNX model for dpt_large_384 already exists. Skipping...\n",
-            "ONNX model for dpt_levit_224 already exists. Skipping...\n",
-            "ONNX model for dpt_next_vit_large_384 already exists. Skipping...\n",
-            "ONNX model for dpt_swin_large_384 already exists. Skipping...\n",
-            "ONNX model for dpt_swin2_tiny_256 already exists. Skipping...\n",
-            "ONNX model for dpt_swin2_base_384 already exists. Skipping...\n",
-            "ONNX model for dpt_swin2_large_384 already exists. Skipping...\n",
-            "ONNX model for dpt_beit_base_384 already exists. Skipping...\n",
-            "ONNX model for dpt_beit_large_384 already exists. Skipping...\n",
-            "File already downloaded: weights/dpt_beit_large_512.pt\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.10/dist-packages/torch/functional.py:504: UserWarning: torch.meshgrid: in an upcoming release, it will be required to pass the indexing argument. (Triggered internally at ../aten/src/ATen/native/TensorShape.cpp:3190.)\n",
-            "  return _VF.meshgrid(tensors, **kwargs)  # type: ignore[attr-defined]\n",
-            "/content/MiDaS/midas/backbones/beit.py:80: TracerWarning: Converting a tensor to a Python integer might cause the trace to be incorrect. We can't record the data flow of Python values, so this value will be treated as a constant in the future. This means that the trace might not generalize to other inputs!\n",
-            "  window_size = tuple(np.array(resolution) // 16)\n",
-            "/usr/local/lib/python3.10/dist-packages/torch/onnx/_internal/jit_utils.py:258: UserWarning: The shape inference of prim::Constant type is missing, so it may result in wrong shape inference for the exported graph. Please consider adding it in symbolic function. (Triggered internally at ../torch/csrc/jit/passes/onnx/shape_type_inference.cpp:1884.)\n",
-            "  _C._jit_pass_onnx_node_shape_type_inference(node, params_dict, opset_version)\n",
-            "/usr/local/lib/python3.10/dist-packages/torch/onnx/utils.py:687: UserWarning: The shape inference of prim::Constant type is missing, so it may result in wrong shape inference for the exported graph. Please consider adding it in symbolic function. (Triggered internally at ../torch/csrc/jit/passes/onnx/shape_type_inference.cpp:1884.)\n",
-            "  _C._jit_pass_onnx_graph_shape_type_inference(\n",
-            "/usr/local/lib/python3.10/dist-packages/torch/onnx/utils.py:1178: UserWarning: The shape inference of prim::Constant type is missing, so it may result in wrong shape inference for the exported graph. Please consider adding it in symbolic function. (Triggered internally at ../torch/csrc/jit/passes/onnx/shape_type_inference.cpp:1884.)\n",
-            "  _C._jit_pass_onnx_graph_shape_type_inference(\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -336,26 +273,10 @@
         "print(f'Copied all {file_extension} files to Google Drive.')"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "G8uCfEwqjI0A",
-        "outputId": "26880496-5a9d-45c4-d425-70e3fbc3fb1a"
+        "id": "G8uCfEwqjI0A"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n",
-            "Copied dpt_beit_large_512.onnx to Google Drive.\n",
-            "Copied dpt_beit_large_384.onnx to Google Drive.\n",
-            "Copied dpt_beit_base_384.onnx to Google Drive.\n",
-            "Copied all .onnx files to Google Drive.\n"
-          ]
-        }
-      ]
+      "outputs": []
     }
   ]
 }
