update notebook (add input normalization to model)

--- a/tools/MiDaS_ONNX_Export.ipynb
+++ b/tools/MiDaS_ONNX_Export.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "history_visible": true,
-      "authorship_tag": "ABX9TyOxLXCG1dGO4g0zcVY1KXoy",
+      "authorship_tag": "ABX9TyNUvk+Epjl0TUgXASRJ2btd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -24,7 +24,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/Doji-Technologies/com.doji.midas/blob/master/tools/MiDaS_ONNX_Export.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/julienkay/com.doji.midas/blob/master/tools/MiDaS_ONNX_Export.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -36,12 +36,25 @@
       "outputs": [],
       "source": [
         "# @title Environment Setup\n",
-        "!git clone https://github.com/isl-org/MiDaS/\n",
-        "!git submodule add https://github.com/isl-org/Next-ViT midas/external/next_vit\n",
+        "!git clone https://github.com/isl-org/MiDaS.git\n",
         "%cd MiDaS\n",
+        "!git submodule add https://github.com/isl-org/Next-ViT midas/external/next_vit\n",
+        "\n",
         "!pip install torch==1.13 torchvision==0.14.0\n",
         "!pip install timm==0.6.13\n",
-        "!pip install einops==0.6.0"
+        "!pip install einops==0.6.0\n",
+        "\n",
+        "\n",
+        "# up-to-date tools not working unfortunately\n",
+        "# !git clone https://github.com/semjon00/MiDaS\n",
+        "# %cd MiDaS\n",
+        "# !git submodule add https://github.com/isl-org/Next-ViT midas/external/next_vit\n",
+        "\n",
+        "# # need pytorch nightly for some reason\n",
+        "# !pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu118\n",
+        "# !pip install timm\n",
+        "# !pip install onnx\n",
+        "# !pip install einops"
       ]
     },
     {
@@ -84,6 +97,15 @@
         "        else:\n",
         "            print(f\"Failed to download the file. HTTP status code: {response.status_code}\")\n",
         "\n",
+        "# Custom normalization layer\n",
+        "class NormalizationLayer(torch.nn.Module):\n",
+        "    def __init__(self, mean, std):\n",
+        "        super(NormalizationLayer, self).__init__()\n",
+        "        self.mean = mean.view(1, -1, 1, 1)\n",
+        "        self.std = std.view(1, -1, 1, 1)\n",
+        "\n",
+        "    def forward(self, x):\n",
+        "        return (x - self.mean) / self.std\n",
         "\n",
         "def patchUnflatten():\n",
         "    import torch.nn as nn\n",
@@ -175,18 +197,22 @@
         "    },\n",
         "]\n",
         "\n",
+        "# convert all models\n",
         "for model_param in reversed(model_params):\n",
-        "    onnxFile = \"weights/\" + model_param[\"name\"] + \".onnx\"\n",
+        "    modelName = model_param[\"name\"]\n",
+        "    onnxFile = \"weights/\" + modelName + \".onnx\"\n",
         "    if os.path.exists(onnxFile):\n",
-        "        print(f\"ONNX model for {model_param['name']} already exists. Skipping...\")\n",
+        "        print(f\"ONNX model for {modelName} already exists. Skipping...\")\n",
         "        continue\n",
         "\n",
-        "    patchUnflatten()\n",
         "    download_file(model_param[\"url\"], \"weights\")\n",
         "    model_path = model_param[\"path\"]\n",
         "    device = torch.device(\"cpu\")\n",
         "\n",
-        "    if model_param[\"name\"] == \"dpt_levit_224\":\n",
+        "    if modelName != \"midas_v21_384\" and modelName != \"midas_v21_small_256\":\n",
+        "        patchUnflatten()\n",
+        "\n",
+        "    if modelName == \"dpt_levit_224\":\n",
         "        model = DPTDepthModel(\n",
         "            path=model_path,\n",
         "            backbone=model_param[\"backbone\"],\n",
@@ -194,16 +220,17 @@
         "            head_features_1=64,\n",
         "            head_features_2=8,\n",
         "        )\n",
-        "    elif model_param[\"name\"] == \"midas_v21_384\":\n",
+        "    elif modelName == \"midas_v21_384\":\n",
         "        model = MidasNet(model_path, non_negative=True)\n",
-        "    elif model_param[\"name\"] == \"midas_v21_small_256\":\n",
+        "    elif modelName == \"midas_v21_small_256\":\n",
         "        model = MidasNet_small(\n",
         "            model_path,\n",
         "            features=64,\n",
         "            backbone=\"efficientnet_lite3\",\n",
         "            exportable=True,\n",
         "            non_negative=True,\n",
-        "            blocks={'expand': True})\n",
+        "            blocks={'expand': True}\n",
+        "        )\n",
         "    else:\n",
         "        model = DPTDepthModel(\n",
         "            path=model_path,\n",
@@ -211,15 +238,37 @@
         "            non_negative=True,\n",
         "        )\n",
         "\n",
-        "    if model_param[\"name\"] == \"dpt_swin2_tiny_256\" or model_param[\"name\"] == \"midas_v21_small_256\":\n",
+        "    # specify input size\n",
+        "    if modelName == \"dpt_swin2_tiny_256\" or modelName == \"midas_v21_small_256\":\n",
         "        net_w, net_h = 256, 256\n",
-        "    elif model_param[\"name\"] == \"dpt_levit_224\":\n",
+        "    elif modelName == \"dpt_levit_224\":\n",
         "        net_w, net_h = 224, 224\n",
         "    else:\n",
         "        net_w, net_h = 384, 384\n",
         "\n",
+        "    # specify mean and std for normalization\n",
+        "    if modelName == \"midas_v21_384\" or modelName == \"midas_v21_small_256\":\n",
+        "        mean = torch.tensor([0.485, 0.456, 0.406])\n",
+        "        std = torch.tensor([0.229, 0.224, 0.225])\n",
+        "    else:\n",
+        "        mean = torch.tensor([0.5, 0.5, 0.5])\n",
+        "        std = torch.tensor([0.5, 0.5, 0.5])\n",
+        "\n",
+        "    # insert normalization layer at the beginning of the model\n",
+        "    norm_layer = NormalizationLayer(mean, std)\n",
+        "    model = torch.nn.Sequential(norm_layer, model)\n",
+        "\n",
         "    model.eval()\n",
-        "    torch.onnx.export(model, torch.rand(1, 3, net_h, net_w, dtype=torch.float), onnxFile, export_params=True)\n",
+        "    torch.onnx.export(\n",
+        "        model,\n",
+        "        torch.rand(1, 3, net_h, net_w, dtype=torch.float),\n",
+        "        onnxFile,\n",
+        "        export_params=True,\n",
+        "        opset_version=15,\n",
+        "        input_names=[\"input_image\"],\n",
+        "        output_names=[\"output_depth\"],\n",
+        "        do_constant_folding=True\n",
+        "    )\n",
         "\n",
         "    # free memory\n",
         "    del model\n",
@@ -247,7 +296,7 @@
         "source_folder = 'weights/'\n",
         "\n",
         "# Define the target folder in your Google Drive where you want to copy the files\n",
-        "target_folder = '/content/drive/MyDrive/MiDaS_Models/'\n",
+        "target_folder = '/content/drive/MyDrive/MiDaS_Models/15/'\n",
         "\n",
         "# Ensure the target folder exists, or create it if it doesn't\n",
         "if not os.path.exists(target_folder):\n",
